--- a/HTML5 & CSS3/Desafios/desafio009/index.html
+++ b/HTML5 & CSS3/Desafios/desafio009/index.html
@@ -7,6 +7,15 @@
     <title>Vídeos legais para assistir</title>
 </head>
 <body>
-    <h1>Vídeos legais para assistir</h1>
+    <style>
+        body {
+            background-color: antiquewhite;
+        }
+    </style>
+    <h1>VÍDEOS LEGAIS PARA ASSISTIR</h1>
+    <p><a href="Outas páginas/pagHardware.html" target="_self" rel="next"><img src="imagens/thumb-hardware.png" alt="thumb-hardware"></a></p>
+    <p><a href="Outas páginas/pagHTML5.html" target="_self" rel="next"><img src="imagens/thumb-html.png" alt="thumb-html"></a></p>
+    <p><a href="Outas páginas/pagJavaScript.html" target="_self" rel="next"><img src="imagens/thumb-js.png" alt="thumb-js"></a></p>
+    <p><a href="Outas páginas/pagPython3.html" target="_self" rel="next"><img src="imagens/thumb-python.png" alt="thumb-python"></a></p>
 </body>
 </html>
