Aula sobre fontes

--- a/HTML5 & CSS3/Exercícios/ex017 - Fontes em CSS/fonte01.html
+++ b/HTML5 & CSS3/Exercícios/ex017 - Fontes em CSS/fonte01.html
@@ -7,11 +7,22 @@
     <title>Fontes em CSS</title>
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
-        }
+            font-family: 'Work Sans', Arial, Helvetica, sans-serif;
 
-        h1, h2 {
-            font-family: 'Times New Roman', Times, serif;
+            font-size: 1em; /* Medidas Absolutas:
+                               cm, mm, in, px, pt, pc
+
+                               Medidas Relativas:
+                               em, ex, rem, vw, vh, %
+
+                               16px é geralmente = 1em */
+
+            font-weight: normal; /* Fonte utilizada para PESO (grossura das letras) */
+                                 /* lighter normal bold bolder */
+
+            font-style: normal;  /* Fonte utilizada para ITÁLICO */
+
+            text-decoration: underline; /* Fonte utilizada para SUBLINHADO */
         }
     </style>
 </head>
