--- a/HTML5 & CSS3/Exercícios/ex016 - Representando Cores com CSS3/Cor02.html
+++ b/HTML5 & CSS3/Exercícios/ex016 - Representando Cores com CSS3/Cor02.html
@@ -11,7 +11,7 @@
         }
         body {
             background-image: linear-gradient(to right, #6D11FF, #CE00E5, 
-                                              #FF00BF, #FF0067, #FFC700);
+                                              #ff00bf, #FF0067, #FFC700);
             background-attachment: fixed;
         }
     </style>
