Aprendendo modelos de caixa pt2

--- a/HTML5 & CSS3/Exercícios/ex021/caixa01.html
+++ b/HTML5 & CSS3/Exercícios/ex021/caixa01.html
@@ -6,24 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Caixas</title>
     <style>
-        h1 {
+        h1 { /* MODELO BOX-LEVEL*/
+
             background-color: lightgray;
             height: 300px;
             width: 300px;
-            border-width: 10px;
-            border-style: solid;
-            border-color: darkgray;
-            
-            padding-top: 10px;
-            padding-right: 10px;
-            padding-bottom: 10px;
-            padding-left: 10px;
+
+            border: 10px solid darkslategray;
+
+            padding: 10px;
+
+            margin: 20px auto 40px auto;
+
+            outline: 5px dashed salmon;
         }
 
-        a {
-            border-width: 2px;
-            border-style: solid;
-            border-color: red;
+        a { /* MODELO INLINE-LEVEL */
+            
+            border: 3px solid red;
+
+            padding: 10px;
         }
     </style>
 </head>
