--- a/HTML5 & CSS3/Exercícios/ex021 - Modelos de Caixa/caixa02.html
+++ b/HTML5 & CSS3/Exercícios/ex021 - Modelos de Caixa/caixa02.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-            background-color: aliceblue;
+            background-color: dimgray;
             margin: 0%;
         }
 
@@ -18,25 +18,49 @@
             margin: 10px;
         }
 
+        nav {
+            background-color: rgb(102, 102, 102);
+            padding: 3px;
+            box-shadow: 2px 2px 4px 1px rgba(0, 0, 0, 0.315);
+        }
+
+        nav > a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            margin-right: 10px;
+        }
+
+        nav > a:hover {
+            text-decoration: underline;
+        }
+
         main {
             background-color: white;
             padding: 10px;
             margin: 10px;
+            border-radius: 10px 0px;
+            box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.384);
         }
 
         article {
-            background-color: azure;
+            background-color: lightgray;
+            padding: 5px;
         }
 
         article > aside {
-            background-color: gainsboro;
+            background-color: rgb(165, 165, 165);
         }
 
         footer {
             background-color: black;
             color: white;
             text-align: center;
-            padding: 1px;
+            padding: 4px;
+            margin: 0px;
+        }
+
+        footer > p {
             margin: 0px;
         }
     </style>
@@ -54,7 +78,7 @@
     </header>
     <main>
         <section id="assuntos">
-
+            <p>Esportes Política Tecnologia</p>
         </section>
         <section id="noticias">
             <article>
