--- a/HTML5 & CSS3/Desafios/desafio005/index.html
+++ b/HTML5 & CSS3/Desafios/desafio005/index.html
@@ -13,7 +13,7 @@
     <img src="imagens/foto-perfil.jpeg" alt="foto-perfil"
     style="border-radius: 30px">
     <p><big>
-        Olá, meu nome é <strong>Lucas Henrique Costa de Oliveira</strong>, tenho 20 anos de idade.
+        Olá, meu nome é <strong>Lucas Henrique Costa de Oliveira</strong>, tenho 21 anos de idade.
         Atualmente estudo na Fatec - São José dos Campos, estou me formando tecnólogo em Banco de Dados.
         Além da faculdade, faço cursos através da plataforma 
         <a href="https://www.cursoemvideo.com/" target="_blank" rel="external">Curso em Vídeo</a> do Profº Gustavo Guanabara.
@@ -21,11 +21,10 @@
     </big></p>
     <h2>Como falar comigo?</h2>
     <ul type="disc">
-        <li><img src="imagens/icone-github.png" alt="icone-github"><a href="https://github.com/LucasHCOliveira7" target="_blank" rel="external">/GitHub</a> - Acesse meu repositório público do GitHub</li>
-        <li><img src="imagens/icone-linkedin.png" alt="icone-linkedin"><a href="https://www.linkedin.com/in/lucas-henrique-9a557620b/" target="_blank" rel="external">/Linkedin</a> - Me adiciona lá no Linkedin</li>
-        <li><img src="imagens/icone-instagram.png" alt="icone-instagram"><a href="https://www.instagram.com/_lucashcoliveira/" target="_blank" rel="external">/Instagram</a> - Me siga lá no Instagram</li>
-        <li><img src="imagens/icone-facebook.png" alt="icone-facebook"><a href="https://www.facebook.com/profile.php?id=100087488743833" target="_blank" rel="external">/Facebook</a> - Me acompanhe lá no Facebook</li>
-        <li><img src="imagens/icone-whatsapp.png" alt="icone-whatsapp"><a href="https://wa.me/+5512997857903" target="_blank" rel="external">/WhatsApp</a> - Fale comigo pelo WhatsApp</li>
+        <li><img src="imagens/icone-github.png" alt="icone-github" width="25" height="25"><a href="https://github.com/LucasHCOliveira7" target="_blank" rel="external">/GitHub</a> - Acesse meu repositório público do GitHub</li>
+        <li><img src="imagens/icone-linkedin.png" alt="icone-linkedin" width="25" height="25"><a href="https://www.linkedin.com/in/lucas-henrique-9a557620b/" target="_blank" rel="external">/Linkedin</a> - Me adiciona lá no Linkedin</li>
+        <li><img src="imagens/icone-instagram.png" alt="icone-instagram" width="25" height="25"><a href="https://www.instagram.com/_lucashcoliveira/" target="_blank" rel="external">/Instagram</a> - Me siga lá no Instagram</li>
+        <li><img src="imagens/icone-whatsapp.png" alt="icone-whatsapp" width="25" height="25"><a href="https://wa.me/+5512997857903" target="_blank" rel="external">/WhatsApp</a> - Fale comigo pelo WhatsApp</li>
     </ul>
 </body>
 </html>
