--- a/HTML5 & CSS3/Exercícios/ex012 - Vídeos com HTML5/index.html
+++ b/HTML5 & CSS3/Exercícios/ex012 - Vídeos com HTML5/index.html
@@ -10,7 +10,7 @@
     <h1>Inserindo vídeos hospedados localmente</h1>
     <p>Este vídeo está hospedado em meu próprio servidor.</p>
     
-    <video width="600" poster="imagens/floresta-capa.png" controls loop>
+    <video width="600" poster="imagens/limoes-capa.png" controls loop>
         <source src="midia/meu-video.m4v" type="video/m4v">
         <source src="midia/meu-video.mp4" type="video/mp4">
         <source src="midia/meu-video.webm" type="video/webm">
